--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,18 @@ main {
     margin-top: 150px;
     text-align: center;
 }
+
+main .main-logo{
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-logo img {
+    width: 300px;
+}
+
+main .main-input {
+    width: 530px;
+    margin: 0 auto;
+}
