--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ main .main-buttons div {
 main .main-buttons button {
     height: 36px;
     background-color: #f2f2f2;
-    border: 0;
+    border: 1px solid #f8f9fa;
     font-size: 14px;
     color: #5f6368;
     border-radius: 5px;
@@ -128,7 +128,36 @@ main .main-buttons button {
     margin-right: 15px;
 }
 main .main-buttons button:hover {
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px #000001;
+    border: 1px solid #dadce0;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
     color: #222;
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+footer .footer-left {
+    justify-self: left;
+}
+footer .footer-right {
+    justify-self: right;
+}
+footer ul li a {
+    margin: 10px;
+    color: #5f6368;
 }
